Removing layout shifts | Fix pricing page carousel spacings

--- a/src/components/common/download-button/download-button.module.scss
+++ b/src/components/common/download-button/download-button.module.scss
@@ -2,5 +2,11 @@
 @import 'css/helpers';
 
 .cta {
+  opacity: 0;
   margin-top: 32px;
+  transition: opacity var(--duration-moderate) linear;
+
+  &.visible {
+    opacity: 1;
+  }
 }
